<resources>
    <string name="app_name">iProfile</string>
    <string name="Skip">Skip</string>
    <string name="Next">Next</string>
    <string name="shweta">Shweta Misal</string>
    <string name="intro1">Create your own profile</string>
    <string name="easy">Easily Create</string>
    <string name="sub"> Now you can easily login and registertion,to make use of the app with very easy login and registertion screen</string>
    <string name="go">Got It</string>
    <string name="start">start</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="Submit">Submit</string>
    <string name="iprofile">iProfile</string>
    <string name="title_activity_maps">Map</string>


</resources>